--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "jsonwebtoken": "^8.5.1",
     "mysql": "^2.15.0",
     "promise": "^8.0.3",
-    "q": "^1.5.1"
+    "q": "^1.5.1",
+    "sanitizer": "^0.1.3"
   }
 }
